--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>QS</title>
 	<link rel='stylesheet' type='text/css' href='js/lib/jquery-ui-1.12.1.custom/jquery-ui.min.css' />
 	<link rel='stylesheet' type='text/css' href='css/menu.css' />
@@ -14,6 +15,7 @@
 	<script type='text/javascript' src='js/api.js'></script>
 	<script type='text/javascript' src='js/board.js'></script>
 	<script type='text/javascript' src='js/control.js'></script>
+	<script type='text/javascript' src='js/side_support.js'></script>
 	<script type='text/javascript'>
 $(function() {
 	main.init();
