見栄えを整えた

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,9 @@
 	<script type='text/javascript' src='js/side_support.js'></script>
 	<script type='text/javascript' src='js/uitools.js'></script>
 	<script type='text/javascript' src='js/timer.js'></script>
+
+	<script type='text/javascript' src='js/piece/simple_show.js'></script>
+
 	<script type='text/javascript'>
 $(function() {
 	main.init();
