いとまず、再び動く

--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,15 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>QS</title>
 	<link rel='stylesheet' type='text/css' href='js/lib/jquery-ui-1.12.1.custom/jquery-ui.min.css' />
-	<link rel='stylesheet' type='text/css' href='js/lib/jq_menu/mymenu.css' />
-	<link rel='stylesheet' type='text/css' href='js/lib/jq_menu/gmi/gmi.css' />
+	<link rel='stylesheet' type='text/css' href='js/jq_menu/mymenu.css' />
+	<link rel='stylesheet' type='text/css' href='js/jq_menu/group_menu_item/group_menu_item.css' />
 	<link rel='stylesheet' type='text/css' href='css/label.css' />
 	<link rel='stylesheet' type='text/css' href='css/status.css' />
 	<link rel='stylesheet' type='text/css' href='css/board.css' />
 	<script type='text/javascript' src='js/lib/jquery-3.3.1.min.js'></script>
 	<script type='text/javascript' src='js/lib/jquery-ui-1.12.1.custom/jquery-ui.min.js'></script>
-	<script type='text/javascript' src='js/lib/jq_menu/mymenu.js'></script>
-	<script type='text/javascript' src='js/lib/jq_menu/gmi/gmi.js'></script>
+	<script type='text/javascript' src='js/jq_menu/mymenu.js'></script>
+	<script type='text/javascript' src='js/jq_menu/group_menu_item/group_menu_item.js'></script>
 	<script type='text/javascript' src='js/main.js'></script>
 	<script type='text/javascript' src='js/status.js'></script>
 	<script type='text/javascript' src='js/api.js'></script>
